--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,12 @@
 name = "gophsters"
 version = "0.1.0"
 authors = ["Julien Blanchard <julien@sideburns.eu>"]
+edition = "2018"
 
 [dependencies]
 hyper = "0.12"
 hyper-tls = "*"
-serde = "*"
-serde_derive = "*"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "*"
 chrono = "*"
 regex ="*"
