--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 authors = ["Julien Blanchard <julien@sideburns.eu>"]
 
 [dependencies]
-hyper = "0.12"
-hyper-tls = "*"
+reqwest = { version = "*", features = ["blocking", "json"] }
 serde = "*"
 serde_derive = "*"
 serde_json = "*"
